<resources>
    <string name="app_name">Chickens</string>
    <string name="chicken_name">Назва</string>
    <string name="chicken_egg_num">Яйценосність</string>
    <string name="add_str">Додати</string>
    <string name="all_str">Показати всі</string>
    <string name="next_btn_text">Далі</string>
    <string name="num_btn_text">Більше 300</string>
    <string-array name="chicken_type">
        <item>Яєчна</item>
        <item>М\'ясна</item>
        <item>М\'ясо-яєчна</item>
    </string-array>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>